--- a/roles/web/templates/nginx_site_config.j2
+++ b/roles/web/templates/nginx_site_config.j2
@@ -51,13 +51,13 @@ server {
     }
 
     # Error pages
-    error_page 500 502 504 /500.html;
-    location = /500.html {
-        root {{ project_path }}/{{ application_name }}/templates/;
-    }
+    #error_page 500 502 504 /500.html;
+    #location = /500.html {
+    #    root {{ project_path }}/{{ application_name }}/templates/;
+    #}
 
-    error_page 503 /maintenance_on.html;
-    location = /maintenance_on.html {
-        root {{ virtualenv_path }}/;
-    }
+    #error_page 503 /maintenance_on.html;
+    #location = /maintenance_on.html {
+    #    root {{ virtualenv_path }}/;
+    #}
 }
