--- a/roles/web/templates/nginx_site_config.j2
+++ b/roles/web/templates/nginx_site_config.j2
@@ -6,16 +6,17 @@ upstream {{ application_name }}_wsgi_server {
   server unix:{{ virtualenv_path }}/run/gunicorn.sock fail_timeout=0;
 }
 
-server {
-    listen      80;
-    server_name {{ nginx_server_name }};
-    rewrite     ^ https://$server_name$request_uri? permanent;
-}
+#server {
+#    listen      80;
+#    server_name {{ nginx_server_name }};
+#    rewrite     ^ https://$server_name$request_uri? permanent;
+#}
 
 server {
-    listen              443;
+    listen              80;
+    listen              443 ssl;
     server_name         {{ nginx_server_name }};
-	ssl on;
+	#ssl on;
 	ssl_certificate     {{ ssl_dest_dir }}/{{ application_name }}.crt;
 	ssl_certificate_key {{ ssl_dest_dir }}/{{ application_name }}.key;
 
